Source/JavaScriptCore/API/WebKitAvailability.h
@@ -31,7 +31,7 @@
 #include <AvailabilityMacros.h>
 #include <CoreFoundation/CoreFoundation.h>
 
-#if !TARGET_OS_IPHONE && __MAC_OS_X_VERSION_MIN_REQUIRED <= 1090
+#if !TARGET_OS_IPHONE && __MAC_OS_X_VERSION_MIN_REQUIRED <= 101100
 /* To support availability macros that mention newer OS X versions when building on older OS X versions,
    we provide our own definitions of the underlying macros that the availability macros expand to. We're
    free to expand the macros as no-ops since frameworks built on older OS X versions only ship bundled with
@@ -39,7 +39,11 @@
 */
 
 #ifndef __NSi_10_10
-#define __NSi_10_10 introduced=10.0
+#define __NSi_10_10 introduced=10.10
+#endif
+
+#ifndef __NSi_10_11
+#define __NSi_10_11 introduced=10.11
 #endif
 
 #ifndef __AVAILABILITY_INTERNAL__MAC_10_9
@@ -58,7 +62,7 @@
 #define AVAILABLE_MAC_OS_X_VERSION_10_10_AND_LATER
 #endif
 
-#endif /* __MAC_OS_X_VERSION_MIN_REQUIRED <= 1090 */
+#endif /* __MAC_OS_X_VERSION_MIN_REQUIRED <= 101100 */
 
 #else
 #define CF_AVAILABLE(_mac, _ios)
